# Appointementbooking

./: .replit  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  railway.toml  render.yaml  replit.md  vercel.json
TailorTalk (1)/TailorTalk/: app.py  fly.toml
TailorTalk (1)/TailorTalk/backend/: agent.py  calendar_service.py  database.py  llm_service.py  main.py  models.py  tools.py
